--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,9 @@
 variables css
 */
 :root {
-    --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
+    --color-bg: #818CF8; /* * --color-bg: #1f1f38; */
+    --color-bg-variant: #6366F1; /* * --color-bg-variant: #2c2c6c */
+    --color-primary: #7FFFD4;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
@@ -41,7 +41,7 @@ body {
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(../src/assets/stardust.png);
+    background-image: url(../src/assets/brick-wall-dark.png);
 }
 
 /* GENERAL STYLES */
