--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -20,8 +20,8 @@
 .portfolio__item-image img {
     border-radius: 1.5rem;
     overflow: hidden;
-    max-width: 100%;
-    height: auto;
+    /* max-width: 100%;
+    height: auto; */
 }
 
 .portfolio__item-image img:hover {
