@ => Added text anims w react-typed, and modified the portfolio images

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(../src/assets/brick-wall-dark.png);
+    background-image: url(../src/assets/brick-wall.png);
 }
 
 /* GENERAL STYLES */
